fix: changes font to more readable one

--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@
     <title>nik rychagov | coldwhiteday</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500&display=swap"
-      rel="stylesheet"
-    />
-    <link href="styles.css" rel="stylesheet" />
+    <link href="http://fonts.googleapis.com/css?family=Podkova:400|Inconsolata:400,700" rel="stylesheet" type="text/css">    <link href="styles.css" rel="stylesheet" />
   </head>
   <body>
     <div class="container">
@@ -22,76 +18,76 @@
         fantasy/non-fiction books. I'm not really into e-commerse web or some
         other applications but I enjoy coding as well and
         <span class="bold"
-          >looking any opportutities for applying my skills</span
-        >. I live & work in Saint Petersburg, Russia.
+              >looking any opportutities for applying my skills</span
+            >. I live & work in Saint Petersburg, Russia.
       </div>
 
-      <div class="contacts">
-        <span>You can find me on </span>
-        <span
-          ><a
-            class="link"
-            target="_blank"
-            href="https://github.com/onecoldwhiteday"
-            >github</a
-          >,
-        </span>
-        <span>
-          <a
-            class="link"
-            target="_blank"
-            href="https://twitter.com/coldwhiteday"
-            >twitter</a
-          >
-          or</span
-        >
-        <span
-          ><a
-            target="_blank"
-            class="link"
-            href="https://www.instagram.com/coldwhiteday/"
-            >instagram</a
-          ></span
-        >.
-      </div>
+          <div class="contacts">
+            <span>You can find me on </span>
+            <span
+                ><a
+                     class="link"
+                     target="_blank"
+                     href="https://github.com/onecoldwhiteday"
+                     >github</a
+                   >,
+            </span>
+                  <span>
+                    <a
+                        class="link"
+                        target="_blank"
+                        href="https://twitter.com/coldwhiteday"
+                        >twitter</a
+                      >
+                      or</span
+                    >
+                    <span
+                        ><a
+                             target="_blank"
+                             class="link"
+                             href="https://www.instagram.com/coldwhiteday/"
+                             >instagram</a
+                           ></span
+                         >.
+          </div>
 
-      <div class="desc">
-        * For now I am working at
-        <span
-          ><a class="link" href="https://www.devhouse.pro/" target="_blank"
-            >Devhouse</a
-          ></span
-        >
-        as Full-Stack developer, making operator's interface for cashierless
-        checkout shop project for
-        <span
-          ><a
-            class="link"
-            href="https://vkusvill.ru/en/business/"
-            target="_blank"
-            >Vkusvill</a
-          ></span
-        >, client-side with vue.js and server-side with Golang.
-      </div>
+                          <div class="desc">
+                            * For now I am working at
+                            <span
+                                ><a class="link" href="https://www.devhouse.pro/" target="_blank"
+                                                                                  >Devhouse</a
+                                                                                ></span
+                                                                              >
+                                                                              as Full-Stack developer, making operator's interface for cashierless
+                                                                              checkout shop project for
+                                                                              <span
+                                                                                  ><a
+                                                                                       class="link"
+                                                                                       href="https://vkusvill.ru/en/business/"
+                                                                                       target="_blank"
+                                                                                       >Vkusvill</a
+                                                                                     ></span
+                                                                                   >, client-side with vue.js and server-side with Golang.
+                          </div>
 
-      <div class="desc">
-        * In my free time I am actively
-        <span
-          ><a
-            class="link"
-            href="https://openprocessing.org/user/282365?view=sketches"
-            target="_blank"
-            >learning</a
-          ></span
-        >
-        Procesing & p5.js toolkit for creative coding and Golang for server-side
-        development. Time to time I'm enjoying 3D-modeling with
-        <span
-          ><a class="link" href="https://www.blender.org/" target="_blank"
-            >Blender</a
-          >.</span
-        >
-      </div>
+                                                                                    <div class="desc">
+                                                                                      * In my free time I am actively
+                                                                                      <span
+                                                                                          ><a
+                                                                                               class="link"
+                                                                                               href="https://openprocessing.org/user/282365?view=sketches"
+                                                                                               target="_blank"
+                                                                                               >learning</a
+                                                                                             ></span
+                                                                                           >
+                                                                                           Procesing & p5.js toolkit for creative coding and Golang for server-side
+                                                                                           development. Time to time I'm enjoying 3D-modeling with
+                                                                                           <span
+                                                                                               ><a class="link" href="https://www.blender.org/" target="_blank"
+                                                                                                                                                >Blender</a
+                                                                                                                                              >.</span
+                                                                                                                                            >
+                                                                                    </div>
     </div>
   </body>
 </html>
