Some info updates and visual revise

--- a/index.html
+++ b/index.html
@@ -3,91 +3,86 @@
     <title>nik rychagov | coldwhiteday</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="http://fonts.googleapis.com/css?family=Podkova:400|Inconsolata:400,700" rel="stylesheet" type="text/css">    <link href="styles.css" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&family=Roboto:wght@100&display=swap"
+      rel="stylesheet"
+    />
+    <link href="styles.css" rel="stylesheet" />
   </head>
   <body>
     <div class="container">
-      <h1 class="title">Hey, I'm Nik Rychagov</h1>
+      <h1 class="main-title">Hey, I'm Nik Rychagov</h1>
 
-      <div class="title">
+      <div class="sub-title underline">
         I'm <span class="bold">writing code</span> and trying to make some art.
       </div>
       <div class="desc">
         Autodidact, former barista guy. I like puzzling tasks, learning &
-        researching something new, modular synthesizers, generative art and
-        fantasy/non-fiction books. I'm not really into e-commerse web or some
-        other applications but I enjoy coding as well and
-        <span class="bold"
-              >looking any opportutities for applying my skills</span
-            >. I live & work in Saint Petersburg, Russia.
+        researching something new, hiking, drawing/painting and some
+        fiction/non-fiction books. I'm not really into e-commerce web or some
+        other applications but I enjoy coding and building modern beautiful UIs
+        as well and
+        <span class="thin-underline"
+          >looking any opportunities for applying and improving my skills</span
+        >. I live & work in
+        <span class="thin-underline">Novi Sad, Serbia</span>.
       </div>
 
-          <div class="contacts">
-            <span>You can find me on </span>
-            <span
-                ><a
-                     class="link"
-                     target="_blank"
-                     href="https://github.com/onecoldwhiteday"
-                     >github</a
-                   >,
-            </span>
-                  <span>
-                    <a
-                        class="link"
-                        target="_blank"
-                        href="https://twitter.com/coldwhiteday"
-                        >twitter</a
-                      >
-                      or</span
-                    >
-                    <span
-                        ><a
-                             target="_blank"
-                             class="link"
-                             href="https://www.instagram.com/coldwhiteday/"
-                             >instagram</a
-                           ></span
-                         >.
-          </div>
+      <div class="contacts">
+        <span>You can find me on </span>
+        <span
+          ><a
+            class="link"
+            target="_blank"
+            href="https://github.com/onecoldwhiteday"
+            >github</a
+          >,
+        </span>
+        <span>
+          <a
+            class="link"
+            target="_blank"
+            href="https://twitter.com/coldwhiteday"
+            >twitter</a
+          >
+          or</span
+        >
+        <span
+          ><a
+            target="_blank"
+            class="link"
+            href="https://www.instagram.com/coldwhiteday/"
+            >instagram</a
+          ></span
+        >.
+      </div>
+      <div class="desc underline">* For now I am looking for a job.</div>
+      <div class="desc">
+        * I have more than 2 years of Front-End experience with Angular(RxJs,
+        Angular Universal, Angular Material) and Vue.js(2, 3 and kind of its
+        ecosystem with Vuex, Composition API and so on) from huge e-commerce
+        projects to small, thin but complex UIs in collaboration with ML
+        devs(including live video streaming by Websockets, data visualization
+        with D3.js library, building entities based in event-driven system
+        etc.), after that I had 1-year-break for NodeJS to research Back-End
+        deeper and get to know how things work on the other side, including
+        SQL/NO-SQL databases, GraphQL, Websockets, Microservices and so on, and
+        now I am ready to dive back.
+      </div>
+      <div class="desc">
+        * In my free time I am actively learning React.js and Three.js as best
+        tools available for a modern client-side applications. Time to time I'm
+        enjoying 3D-modeling with
+        <span
+          ><a class="link" href="https://www.blender.org/" target="_blank"
+            >Blender</a
+          >.</span
+        >
+      </div>
 
-                          <div class="desc">
-                            * For now I am working at
-                            <span
-                                ><a class="link" href="https://www.devhouse.pro/" target="_blank"
-                                                                                  >Devhouse</a
-                                                                                ></span
-                                                                              >
-                                                                              as Full-Stack developer, making operator's interface for cashierless
-                                                                              checkout shop project for
-                                                                              <span
-                                                                                  ><a
-                                                                                       class="link"
-                                                                                       href="https://vkusvill.ru/en/business/"
-                                                                                       target="_blank"
-                                                                                       >Vkusvill</a
-                                                                                     ></span
-                                                                                   >, client-side with vue.js and server-side with Golang.
-                          </div>
-
-                                                                                    <div class="desc">
-                                                                                      * In my free time I am actively
-                                                                                      <span
-                                                                                          ><a
-                                                                                               class="link"
-                                                                                               href="https://openprocessing.org/user/282365?view=sketches"
-                                                                                               target="_blank"
-                                                                                               >learning</a
-                                                                                             ></span
-                                                                                           >
-                                                                                           Procesing & p5.js toolkit for creative coding and Golang for server-side
-                                                                                           development. Time to time I'm enjoying 3D-modeling with
-                                                                                           <span
-                                                                                               ><a class="link" href="https://www.blender.org/" target="_blank"
-                                                                                                                                                >Blender</a
-                                                                                                                                              >.</span
-                                                                                                                                            >
-                                                                                    </div>
+      <div class="decoration-container">
+        <img src="assets/finn.png" alt="optional decoration image" />
+      </div>
     </div>
   </body>
 </html>
