Add link to project

--- a/index.html
+++ b/index.html
@@ -60,14 +60,19 @@
       <div class="desc">
         * I have more than 2 years of Front-End experience with Angular(RxJs,
         Angular Universal, Angular Material) and Vue.js(2, 3 and kind of its
-        ecosystem with Vuex, Composition API and so on) from huge e-commerce
-        projects to small, thin but complex UIs in collaboration with ML
-        devs(including live video streaming by Websockets, data visualization
-        with D3.js library, building entities based in event-driven system
-        etc.), after that I had 1-year-break for NodeJS to research Back-End
-        deeper and get to know how things work on the other side, including
-        SQL/NO-SQL databases, GraphQL, Websockets, Microservices and so on, and
-        now I am ready to dive back.
+        ecosystem with Vuex, Composition API and so on) from
+        <a
+          class="link"
+          target="_blank"
+          href="https://www.cakeiteasy.no/oslo/kategori/kaker-1"
+          >big e-commerce projects</a
+        >to small, thin but complex UIs in collaboration with ML devs(including
+        live video streaming by Websockets, data visualization with D3.js
+        library, building entities based in event-driven system etc.), after
+        that I had 1-year-break for NodeJS to research Back-End deeper and get
+        to know how things work on the other side, including SQL/NO-SQL
+        databases, GraphQL, Websockets, Microservices and so on, and now I am
+        ready to dive back.
       </div>
       <div class="desc">
         * In my free time I am actively learning React.js and Three.js as best
